# archivebox-api

./: .bumpversion.cfg  .codespellignore  .dockerignore  .env.example  .gitignore  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.specify/reports/: code_enhancement_report.md  results.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
archivebox_api/: __init__.py  __main__.py  agent_server.py  api_client.py  api_wrapper.py  archivebox_a2a.py  archivebox_agent.py  archivebox_agent.py.bak  archivebox_api.py  archivebox_mcp.py  auth.py  decorators.py  graph_config.py  mcp.py  mcp_config.json  mcp_server.py  tools.py  utils.py
archivebox_api/agent/: IDENTITY.md  templates.py
archivebox_api/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
archivebox_api/api/: __init__.py  api_client_auth.py  api_client_base.py  api_client_cli.py  api_client_core.py
archivebox_api/mcp/: __init__.py  mcp_authentication.py  mcp_cli.py  mcp_core.py
archivebox_api/prompts/: main_agent.json
archivebox_api/skills/archivebox-api-authentication/: SKILL.md
archivebox_api/skills/archivebox-api-cli/: SKILL.md
archivebox_api/skills/archivebox-api-core/: SKILL.md
archivebox_api/skills/archivebox-starter/: SKILL.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_archivebox_api_brute_force_coverage.py  test_archivebox_coverage.py  test_archivebox_coverage_extra.py  test_basic.py  test_concept_parity.py  test_init_dynamics.py
usage/: index.html
