[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archivebox-api"
version = "0.1.21"
description = "Pythonic ArchiveBox API Wrapper and Fast MCP Server for Agentic AI use!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.8",
]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.8",
]

agent = [
    "agent-utilities[agent,logfire]>=0.2.8",
]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.8",
]

[project.scripts]
archivebox-mcp = "archivebox_api.mcp:mcp_server"
archivebox-agent = "archivebox_api.agent:agent_server"

[tool.setuptools.package-data]
archivebox_api = [ "mcp_config.json", "skills/**", "agent/**",]

[tool.setuptools.packages.find]
where = ["."]
