[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archivebox-api"
version = "0.1.40"
description = "Pythonic ArchiveBox API Wrapper and Fast MCP Server for Agentic AI use!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.26"]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.26"]

agent = [
    "agent-utilities[agent,logfire]>=0.2.26"]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.26"]

[project.scripts]
archivebox-mcp = "archivebox_api.mcp_server:mcp_server"
archivebox-agent = "archivebox_api.agent_server:agent_server"

[tool.setuptools.package-data]
archivebox_api = [ "mcp_config.json", "agent_data/**"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
